--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop Responsive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 
 </head>
-<body>
+
+<body class="lato-normal">
     <header>
-        <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
-        <p class="banner-subtitle">
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
-        </p>
-        <button class="btn-primary">Shop Now</button>
+        <section class="banner">
+            <div class="banner-text">
+                <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                <p class="banner-subtitle font-primary">
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.
+                </p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="banner-image">
+                <img src="Asset/pngwing 10.png" alt="">
+            </div>
+        </section>
+
+
+
 
     </header>
 
@@ -27,6 +43,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
