added our featured section with responsive

--- a/index.html
+++ b/index.html
@@ -30,13 +30,45 @@
                 <img src="Asset/pngwing 10.png" alt="">
             </div>
         </section>
-
-
-
-
     </header>
-
     <main>
+        <section class="featured">
+            <div class="featured-text">
+                <h3 class="f-title font-secondary">Our Featured Flowers</h3>
+                <p class="font-primary">It is a long established fact that a reader will be distracted by the readable
+                    <br>
+                    content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="featured-img-container">
+                <div class="featured-img">
+                    <div class="s-f-img-p">
+                        <img class="f-img" src="Asset/pngwing 6.png" alt="">
+                    </div>
+                    <div class="f-img-title">
+                        <p><u>Pink Flower Tree</u></p>
+                    </div>
+                </div>
+                <div class="featured-img">
+                    <div class="s-f-img-r">
+                        <img class="f-img" src="Asset/pngwing 5.png" alt="">
+                    </div>
+                    <div class="f-img-title">
+                        <p><u>Pink Flower Tree</u></p>
+                    </div>
+                </div>
+                <div class="featured-img">
+                    <div class="s-f-img-y">
+                        <img class="f-img" src="Asset/pngwing 7.png" alt="">
+                    </div>
+                    <div class="f-img-title">
+                        <p><u>Pink Flower Tree</u></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
     </main>
 
