added support section with responsive

--- a/index.html
+++ b/index.html
@@ -68,6 +68,27 @@
             </div>
         </section>
 
+        <section class="support">
+            <div class="support-container">
+                <div class="support-column">
+                    <img src="Asset/Group 57.png" alt="">
+                    <p class="support-msg">Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="support-column">
+                    <img src="Asset/Group 58.png" alt="">
+                    <p class="support-msg">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="support-column">
+                    <div>
+                        <img src="Asset/Group 59.png" alt="">
+                    </div>
+                    <div>
+                        <p class="support-msg">24/7 Free Support</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
