added sale section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
             </div>
         </section>
 
+        <section class="sale">
+            <div class="sale-text">
+                <h3 class="sale-title font-secondary">Hot Deal ! Sale Up To 25% <span id="red">Off</span></h3>
+                <p class="font-primary">It is a long established fact that a reader will be distracted by the readable
+                    <br> content of a page when looking at its layout.
+                </p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <div class="sale-img">
+                <img src="Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
+
 
 
     </main>
