added instagram section with responsive

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
             </div>
         </section>
 
+        <section class="instagram">
+            <div class="insta-text">
+                <h3 class="font-secondary">instagram</h3>
+                <p class="font-primary">It is a long established fact that a reader will be distracted by the readable
+                    <br> content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="insta-img">
+                <img src="Asset/Flower 01.png" alt="">
+                <img src="Asset/Rectangle 4.png" alt="">
+                <img src="Asset/Rectangle 5.png" alt="">
+                <img src="Asset/Rectangle 6.png" alt="">
+            </div>
+        </section>
+
 
 
     </main>
