added deals section with responsive

--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
             </div>
         </section>
 
+        <section class="deals">
+            <div class="deal-container">
+                <h3 class="font-secondary">Get The Latest Deals</h3>
+                <p class="font-primary">$30 coupon for first shopping</p>
+                <div class="input">
+                    <input type="email" name="" id="" class="data" placeholder="Enter your email here...">
+                    <button id="btn" class="btn-primary">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
