--- a/index.html
+++ b/index.html
@@ -127,12 +127,16 @@
                 </div>
             </div>
         </section>
-
-
-
     </main>
 
     <footer>
+        <div class="footer-text">
+            <h2 class="footer-title"><span class="red">Flower</span><span class="white">Shop</span> </h2>
+            <p class="f-subtitle">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <p class="copyright"><small>@2020-2023, FlowerShop.com. All rights reserved. </small></p>
+
+        </div>
 
     </footer>
 
